make models and paste topnav in every file

--- a/templates/Dashboard/product.html
+++ b/templates/Dashboard/product.html
@@ -2,7 +2,7 @@
 {% block title %} product page {% endblock %}  
 
 {% block content %}
-
+{% include 'partials/topside.html' %}
     <!--Table-->
     <div class="container">
         <div class="row my-4">
