--- a/templates/Dashboard/staff.html
+++ b/templates/Dashboard/staff.html
@@ -2,7 +2,7 @@
 {% block title %} staff page {% endblock %}  
 
 {% block content %}
-
+{% include 'partials/topside.html' %}
 <!--Table-->
 <div class="container">
     <div class="row my-4">
