--- a/templates/Dashboard/index.html
+++ b/templates/Dashboard/index.html
@@ -1,6 +1,8 @@
 {% extends 'partials/base.html' %}
 
 {% block content %}
+{% include 'partials/topside.html' %}
+
 <div class="container">
     <div class="row my-5">
         <div class="col-md-6">
