--- a/templates/Dashboard/order.html
+++ b/templates/Dashboard/order.html
@@ -2,6 +2,7 @@
 {% block title %} order page {% endblock %}  
 
 {% block content %}
+{% include 'partials/topside.html' %}
     <!--Table-->
     <div class="container">
         <div class="row my-4">
