make login and logout and register pages

--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -13,16 +13,28 @@
                             class="sr-only">(current)</span></a>
                 </li>
             </ul>
+            {% if user.is_authenticated %}
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <a class="nav-link text-white" href="#">{{ user.username }} Profile
                         <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Logout</a>
+                    <a class="nav-link text-white" href="{% url 'Logout' %}">Logout</a>
                 </li>
             </ul>
-            
+            {% else %}
+
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link text-white" href="{% url 'register' %}"> Register
+                        <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="{% url 'Login' %}">Login</a>
+                </li>
+            </ul>
+            {% endif %}
         </div>
     </div>
 </nav>
