--- a/templates/Dashboard/index.html
+++ b/templates/Dashboard/index.html
@@ -1,6 +1,7 @@
 {% extends 'partials/base.html' %}
 
 {% block content %}
+{% if user.is_authenticated and user.is_staff and user.is_superuser %}
 {% include 'partials/topside.html' %}
 
 <div class="container">
@@ -96,4 +97,14 @@
     </div>
 </div>
 <!--End Graphs-->
+{% else %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Welcome to the Dashboard</h1>
+            <p>Please login as a staff to access the dashboard.</p>
+        </div>
+    </div>
+</div>
+{% endif %}
 {% endblock %}
