--- a/templates/Dashboard/index.html
+++ b/templates/Dashboard/index.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 {% if user.is_authenticated and user.is_staff and user.is_superuser %}
+
 {% include 'partials/topside.html' %}
 
 <div class="container">
@@ -98,13 +99,6 @@
 </div>
 <!--End Graphs-->
 {% else %}
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <h1>Welcome to the Dashboard</h1>
-            <p>Please login as a staff to access the dashboard.</p>
-        </div>
-    </div>
-</div>
+{% include 'Dashboard/staff_index.html' %}
 {% endif %}
 {% endblock %}
