--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -16,7 +16,7 @@
             {% if user.is_authenticated %}
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a class="nav-link text-white" href="#">{{ user.username }} Profile
+                    <a class="nav-link text-white" href="{% url 'profile' %}">{{ user.username }} Profile
                         <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
