--- a/templates/user/profile_update.html
+++ b/templates/user/profile_update.html
@@ -11,7 +11,7 @@
                     <h3>Update Profile</h3>
                 </div>
                 <div class="card-body">
-                    <form method="POST">    
+                    <form method="POST" enctype="multipart/form-data">    
                         {% csrf_token %}
                         {{ form|crispy }}
                         <button type="submit" class="btn btn-primary">Update</button>
