--- a/templates/Dashboard/product.html
+++ b/templates/Dashboard/product.html
@@ -1,6 +1,6 @@
 {% extends 'partials/base.html' %}
 {% block title %} product page {% endblock %}  
-
+{% load crispy_forms_tags %}
 {% block content %}
 {% include 'partials/topside.html' %}
     <!--Table-->
@@ -10,23 +10,9 @@
                 <div class="border bg-white p-3">
                     <h4>Add Products</h4>
                     <hr>
-                    <form action="">
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Name</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1"
-                                aria-describedby="emailHelp">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Quantity</label>
-                            <input type="password" class="form-control" id="exampleInputPassword1">
-                        </div>
-                        <div class="form-group ">
-                            <label for="inputState">Category</label>
-                            <select id="inputState" class="form-control">
-                                <option selected>Choose...</option>
-                                <option>...</option>
-                            </select>
-                        </div>
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ form|crispy }}
 
                         <input class="btn btn-success btn-block" type="submit" value="Add Product">
 
@@ -45,36 +31,18 @@
                         </tr>
                     </thead>
                     <tbody>
+                        {% for product in products %}
                         <tr>
                             <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <td>{{ product.name }}</td>
+                            <td>{{ product.category }}</td>
+                            <td>{{ product.quantity }}</td>
                             <td>
-                                <a class="btn btn-info btn-sm" href="">Edit</a>
-                                <a class="btn btn-danger btn-sm" href="">Delete</a>
+                                <a class="btn btn-info btn-sm" href="{% url 'dashboard-product-update' product.id %}">Edit</a>
+                                <a class="btn btn-danger btn-sm" href="{% url 'dashboard-product-delete' product.id %}">Delete</a>
                             </td>
                         </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                            <td>
-                                <a class="btn btn-info btn-sm" href="">Edit</a>
-                                <a class="btn btn-danger btn-sm" href="">Delete</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>
-                                <a class="btn btn-info btn-sm" href="">Edit</a>
-                                <a class="btn btn-danger btn-sm" href="">Delete</a>
-                            </td>
-                        </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
