--- a/templates/Dashboard/order.html
+++ b/templates/Dashboard/order.html
@@ -18,36 +18,24 @@
                             <th scope="col">Category</th>
                             <th scope="col">Quantity</th>
                             <th scope="col">Order by</th>
+                            <th scope="col">Date</th>
                         </tr>
                     </thead>
                     <tbody>
+                        {% for order in orders %}
                         <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <th scope="row">{{order.id}}</th>
+                            <td>{{order.product}}</td>
+                            <td>{{order.product.category}}</td>
+                            <td>{{order.order_quantity}}</td>
                             <td>
-                                Broni
+                                {{order.staff.username}}
+                            </td>
+                            <td>
+                                {{order.date|date:"d-m-Y h:i a"}}
                             </td>
                         </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
-                            <td>
-                                Kenneth
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Larry</td>
-                            <td>the Bird</td>
-                            <td>@twitter</td>
-                            <td>
-                                Cecilia
-                            </td>
-                        </tr>
+                        {% endfor %}
                     </tbody>
                 </table>
             </div>
