--- a/templates/Dashboard/staff.html
+++ b/templates/Dashboard/staff.html
@@ -12,30 +12,20 @@
                 <thead class="bg-info">
                     <tr class="text-white">
                         <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Phone</th>
                     </tr>
                 </thead>
                 <tbody>
+                    {% for staff in staffs %}
                     <tr>
-                        <th scope="row"><a class="btn btn-info btn-sm" href="">View</a></th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
+                        <th scope="row"><a class="btn btn-info btn-sm" href="{% url 'dashboard-staff-details' staff.id %}">View</a></th>
+                        <td>{{staff.username}}</td>
+                        <td>{{staff.email}}</td>
+                        <td>{{staff.profile.phone}}</td>
                     </tr>
-                    <tr>
-                        <th scope="row"><a class="btn btn-info btn-sm" href="">View</a></th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row"><a class="btn btn-info btn-sm" href="">View</a></th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
-                    </tr>
+                    {% endfor %}
                 </tbody>
             </table>
         </div>
