--- a/templates/Dashboard/staff_index.html
+++ b/templates/Dashboard/staff_index.html
@@ -1,3 +1,5 @@
+{% block content %}
+{% load crispy_forms_tags %}
 <div class="container">
     
 <div>
@@ -9,7 +11,8 @@
                 </div>
                 <div class="card-body">
                     <form method="POST">
-                        
+                        {% csrf_token %}
+                        {{form|crispy}}
                         <input class="btn btn-info btn-block" type="submit" value="Make Request">
                     </form>
                 </div>
@@ -27,31 +30,21 @@
                                 <th scope="col">Product</th>
                                 <th scope="col">Category</th>
                                 <th scope="col">Quantity</th>
+                                <th scope="col">Date</th>
                             </tr>
                         </thead>
                         <tbody>
                             
+                            {% for order in orders %}
+                            {% if order.staff == user %}
                             <tr>
-                                <td>Book</td>
-                                <td>Stationary</td>
-                                <td>10</td>
+                                <td>{{order.product}}</td>
+                                <td>{{order.product.category}}</td>
+                                <td>{{order.product.quantity}}</td>
+                                <td>{{order.date}}</td>
                             </tr>
-							<tr>
-                                <td>Book</td>
-                                <td>Stationary</td>
-                                <td>10</td>
-                            </tr>
-							<tr>
-                                <td>Book</td>
-                                <td>Stationary</td>
-                                <td>10</td>
-                            </tr>
-							<tr>
-                                <td>Book</td>
-                                <td>Stationary</td>
-                                <td>10</td>
-                            </tr>
-                            
+                            {% endif %}
+                            {% endfor %}
                         </tbody>
                     </table>
                 </div>
@@ -60,3 +53,4 @@
     </div>
 </div>
 </div>
+{% endblock %}
