--- a/templates/partials/topside.html
+++ b/templates/partials/topside.html
@@ -1,5 +1,6 @@
-<div class="row">
-    <div class="col-md-4 mt-4">
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 mt-4">
         <div class="card">
             <div class="card-header bg-info text-white">
                 Information
@@ -23,7 +24,7 @@
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
                                     <h4>Staff <i class="fas fa-users"></i></h4>
-                                    <h3>{{ customer_count }}</h3>
+                                    <h3>{{ staff_count }}</h3>
                                 </div>
                             </div>
                         </a>
@@ -43,7 +44,7 @@
                             <div class="card my-card shadow">
                                 <div class="card-body text-center">
                                     <h4>Orders <i class="fas fa-shipping-fast"></i></h4>
-                                    <h3>{{ order_count }}</h3>
+                                    <h3>{{ orders_count }}</h3>
                                 </div>
                             </div>
                         </a>
@@ -51,5 +52,6 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </div>
