feat: verify email

--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -12,6 +12,7 @@
                     {{ form|crispy }}
 
                     <input class="btn btn-success" type="submit" value="Login">
+                    <a class="mx-4" href="{% url 'password_reset' %}">Forgot Password</a>
                 </form>
             </div>
         </div>
