--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -1,45 +1,42 @@
 {% extends 'partials/base.html' %}
-{% block title %} profile page {% endblock %}
-{% load crispy_forms_tags %}
 
+{% block title %} Profile Page {% endblock %}
+
+{% load crispy_forms_tags %}
 
 {% block content %}
 
-
- <!--Table-->
- <div class="container">
-    <div class="row my-4">
-        <div class="col-md-4">
-
-        </div>
-        <div class="col-md-8">
-            <div class="card">
-                <div class="card-header bg-info text-white">
-                    Profile Page
+<!--Table-->
+<div class="container mt-5">
+    <div class="row justify-content-center align-items-center h-100">
+        <div class="col-md-6">
+            <div class="card bg-dark text-white">
+                <div class="card-header">
+                    <h2 class="text-center mb-4">Profile Page</h2>
                 </div>
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-8">
-                            <span class="h4"> Profile Information</span> <a class="btn btn-info btn-sm float-right"
-                                href="{% url 'profile_update' %}">Edit</a>
+                            <span class="h4"> Profile Information</span>
+                            <a class="btn btn-primary btn-sm float-right" href="{% url 'profile_update' %}">Edit</a>
                             <hr>
-                            <table class="table bg-white table-borderless">
+                            <table class="table table-borderless">
                                 <tbody>
                                     <tr>
-                                        <th scope="row">Name</th>
-                                        <td>{{ user.username }}</td>
+                                        <th scope="row" style="color: white">Name:</th>
+                                        <td style="color: white">{{ user.username }}</td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">Email</th>
-                                        <td>{{ user.email }}</td>
+                                        <th scope="row" style="color: white">Email:</th>
+                                        <td style="color: white">{{ user.email }}</td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">Phone</th>
-                                        <td>{{ user.profile.phone }}</td>
+                                        <th scope="row" style="color: white">Phone:</th>
+                                        <td style="color: white">{{ user.profile.phone }}</td>
                                     </tr>
                                     <tr>
-                                        <th scope="row">Address</th>
-                                        <td>{{ user.profile.address }}</td>
+                                        <th scope="row" style="color: white">Address:</th>
+                                        <td style="color: white">{{ user.profile.address }}</td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -52,12 +49,51 @@
                 </div>
             </div>
         </div>
-
     </div>
-
 </div>
 
-
-
 <!--End Table-->
+
+{% endblock %}
+
+{% block styles %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <style>
+        body {
+            background-color: #333;
+            color: #fff;
+        }
+        .card {
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+        .card-header {
+            background-color: #007bff;
+            color: #fff;
+            padding: 10px;
+            border-radius: 10px 10px 0 0;
+        }
+        .card-body {
+            padding: 20px;
+        }
+        .table {
+            background-color: #333;
+            color: #fff;
+        }
+        .table th {
+            background-color: #007bff;
+            color: #fff;
+        }
+        .table td {
+            background-color: #333;
+            color: white;
+        }
+        .img-thumbnail {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 10px;
+        }
+    </style>
 {% endblock %}
